--- a/playbook1.yml
+++ b/playbook1.yml
@@ -1,5 +1,5 @@
 ---
-- name: this is used for testing the groups
+- name: this is used for testing the groups the hosts
   hosts: "{{groups['test']}}"
   gather_facts: true
   become: true
